--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "friendsofsymfony/jsrouting-bundle",
+    "name": "pyksid/jsrouting-bundle",
     "type": "symfony-bundle",
     "description": "A pretty nice way to expose your Symfony routing to client applications.",
     "keywords": [ "js routing", "routing", "javascript" ],
